# bioloog

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  format.sh  main.cpp
.github/workflows/: main.yml
input_files/: covid_dna.txt  fasta_covid19_short.txt  fasta_covid19_short_profile.txt  fasta_example_input.txt  fasta_example_input_illegal_characters.txt  motif_test_error.txt  nucleotides_invalid.txt  protein_sequence.txt  protein_test_error.txt  restriction_site_short.txt  restriction_site_short_2.txt  restriction_site_short_longer_than_12.txt  rna_error.txt  rosalind_cons_1_dataset.txt  rosalind_cons_1_output.txt  rosalind_dna_1_dataset.txt  rosalind_dna_1_output.txt  rosalind_edit_1_dataset.txt  rosalind_lcsm_1_dataset.txt  rosalind_lcsm_1_output.txt  rosalind_lcsq_1_dataset.txt  rosalind_lcsq_1_output.txt  rosalind_prot_1_dataset.txt  rosalind_prot_1_output.txt  rosalind_restriction_1_dataset.txt  rosalind_rna_1_dataset.txt  rosalind_rna_1_output.txt  rosalind_splc_1_dataset.txt  rosalind_splc_1_output.txt  rosalind_sseq_1_dataset.txt  rosalind_sseq_1_output.txt  rosalind_subs_1_dataset.txt  rosalind_subs_1_output.txt
src/: CMakeLists.txt  main.cc
src/DNA/: CMakeLists.txt  count-nucleotides.cc  countNucleotides.cpp  countNucleotides.h  count_nucleotides.cc  count_nucleotides.h  dna_to_rna_transcription.cc  dna_to_rna_transcription.h  find_consensus_and_profile.h  find_motif.cc  find_motif.h  find_shared_motif.cc  find_shared_motif.h  restriction_sites.cc  restriction_sites.h  rna_to_protein_translation.cc  rna_to_protein_translation.h
src/algorithm/: CMakeLists.txt  levenshtein_distance.cc  levenshtein_distance.h  longest_common_subsequence.cc  longest_common_subsequence.h
src/dna/: CMakeLists.txt  count_nucleotides.cc  count_nucleotides.h  dna_to_rna_transcription.cc  dna_to_rna_transcription.h  find_consensus_and_profile.cc  find_consensus_and_profile.h  find_motif.cc  find_motif.h  find_shared_motif.cc  find_shared_motif.h  find_shared_spliced_motif.cc  find_shared_spliced_motif.h  find_spliced_motif.cc  find_spliced_motif.h  restriction_sites.cc  restriction_sites.h  rna_splicing.cc  rna_splicing.h  rna_to_protein_translation.cc  rna_to_protein_translation.h
src/protein/: CMakeLists.txt  edit_distance.cc  edit_distance.h  inferring_mRna_from_protein.cc  inferring_mRna_from_protein.h
src/utils/: CMakeLists.txt  readFromFile.cpp  readFromFile.h  read_from_file.cc  read_from_file.h
src/utils/cli/: CMakeLists.txt  command.cc  command.h  command_test.h  count_nucleotides.cc  count_nucleotides.h  display_error.cc  display_error.h  display_help.cc  display_help.h  dna_to_rna_transcription.cc  dna_to_rna_transcription.h  rna_to_protein_translation.cc  rna_to_protein_translation.h  rna_to_protein_translation_test.h
src/utils/file/: CMakeLists.txt  file.h  read_from_file.cc  read_from_file.h
src/utils/format/: CMakeLists.txt  format.cc  format.h
src/utils/input_validation/: CMakeLists.txt  alphabet_validator.cc  alphabet_validator.h  alphabet_validatort.cc  alphabet_validatort.h
test/: CMakeLists.txt  mainTest.cpp  main_test.cc  test.cc  test.cpp
test/DNA/: countNucleotidesTest.cpp  count_nucleotides_test.cc  count_nucleotides_test.h  dna_to_rna_transcription_test.cc  dna_to_rna_transcription_test.h  dna_transcription_rna_test.cc  dna_transcription_rna_test.h  find_consensus_and_profile_test.cc  find_consensus_and_profile_test.h  find_motif_test.cc  find_motif_test.h  find_shared_motif_test.cc  find_shared_motif_test.h  restriction_sites_test.cc  restriction_sites_test.h  rna_to_protein_translation.cc  rna_to_protein_translation_test.cc  rna_to_protein_translation_test.h
test/dna/: CMakeLists.txt  count_nucleotides_test.cc  count_nucleotides_test.h  dna_to_rna_transcription_test.cc  dna_to_rna_transcription_test.h  find_consensus_and_profile_test.cc  find_consensus_and_profile_test.h  find_motif_test.cc  find_motif_test.h  find_shared_motif_test.cc  find_shared_motif_test.h  find_shared_spliced_motif_test.cc  find_spliced_motif_test.cc  find_spliced_motif_test.h  restriction_sites_test.cc  restriction_sites_test.h  rna_splicing_test.cc  rna_splicing_test.h  rna_to_protein_translation_test.cc  rna_to_protein_translation_test.h
test/protein/: CMakeLists.txt  edit_distance_test.cc  inferring_mRna_from_protein_test.cc  inferring_mRna_from_protein_test.h
test/utils/: CMakeLists.txt  readFromFileTest.cpp  read_from_file_test.cc
test/utils/cli/: command.cc  command_test.cc  command_test.h
test/utils/file/: read_from_file_test.cc  read_from_file_test.h
test/utils/format/: format_test.cc  format_test.h
test/utils/input_validation/: alphabet_validator_test.cc  alphabet_validator_test.h
utils/: readFromFile.h
